# solar-analysis

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  migration_example.md  pyproject.toml  setup_oauth.py
data/cache/weather/: hist_35.6683169_-78.8495883_2024-01-01_2024-03-30_open_meteo.json  hist_35.668_-78.85_2024-01-01_2024-01-07_open_meteo.json
notebooks/: 00_quick_start_demo.ipynb  01_initial_exploration.ipynb  01a_data_loading_and_overview.ipynb  01b_seasonal_and_temporal_analysis.ipynb  01c_baseline_ml_models.ipynb  01d_location_based_analysis.ipynb  02_weather_integration.ipynb  04_enphase_oauth_setup.ipynb  04_weather_enhanced_forecasting.ipynb  05_test_enphase_client.ipynb  06_hybrid_data_system.ipynb
notebooks/data/cache/weather/: hist_35.6683169_-78.8495883_2024-01-01_2024-06-28_open_meteo.json
scripts/: generate_mock_data.py
src/: data_loader.py  enphase_client.py  ml_models.py
src/analysis/: __init__.py  data_summary.py  financial_calculator.py
src/core/: __init__.py  data_manager.py  data_source_detector.py  electricity_rates.py  enphase_client.py  location_loader.py  location_manager.py  notebook_data.py  notebook_utils.py  oauth_setup.py  weather_analysis.py  weather_manager.py
src/data/: __init__.py  column_mapper.py  data_loader.py  data_processing.py  loaders.py  processors.py  quality.py
src/features/: __init__.py  feature_pipeline.py  financial_features.py  location_features.py  temporal_features.py  weather_features.py
src/models/: __init__.py  ml_models.py
src/visualization/: __init__.py  plot_config.py  solar_charts.py
tests/: conftest.py  test_column_mapper.py  test_data_loaders.py  test_data_manager.py  test_data_processors.py  test_data_quality.py  test_data_source_detector.py  test_electricity_rates.py  test_enphase_client.py  test_env_template.py  test_feature_engineering.py  test_financial_calculator.py  test_location_manager.py  test_notebook_env_loading.py  test_notebook_utils.py  test_oauth_setup.py  test_solar_charts.py  test_system_financial_config.py  test_visualization_plot_config.py  test_weather_integration.py
